# MLOps_Project

./: .env.template  .gitattributes  .gitignore  MODEL_RESULTS.md  README.md  analyze_drift.py  automl_analysis.py  check_mlflow_runs.py  check_r2_scores.py  config.py  data_preparation.py  ec2_setup.sh  main.py  pyproject.toml  register_models.py  setup_mlflow_remote.py  start_mlflow_server.py  test_api.py  test_evidently.py  test_mlflow_connection.py  train_all_models.py  train_model1_gbm.py  train_model2_random_forest.py  train_model3_ridge.py  utils.py
api/: main.py
data/: automl_leaderboard.csv  automl_model_types.csv  data_drift_report.html  model_comparison.csv  model_performance_report.html  test.csv  top_3_models.txt  train.csv  validate.csv
plots/ridge/: scaler.pkl
